# snippy-video

./: .gitignore  pyproject.toml
snippy_video/: __init__.py  frames.py
